# flashcard

./: .gitignore  README.md  pyproject.toml
src/flashcard/: main.py  models.py
src/resources/: civics_100q.json
